added a few lines of code

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <div class="container">
             <div class="services">
                 <h2>Services Offered</h2>
+                <p>Just feel free to contact me if your any of the services</p>
             </div>
         </div>
     </div>
