added a service section

--- a/index.html
+++ b/index.html
@@ -75,6 +75,33 @@
                 <h2>Services Offered</h2>
                 <p>Just feel free to contact me if your any of the services</p>
             </div>
+            <div class="offered-services">
+                <div class="service1">
+                    <div class="icon">
+                        <i class='fas fa-server' style='font-size:36px'></i>
+                    </div>
+                    <div class="service">
+                        <h1>Software development</h1>
+                    </div>
+                </div>
+                <div class="service1">
+                    <div class="icon">
+                        <i class='fas fa-server' style='font-size:36px'></i>
+                    </div>
+                    <div class="service">
+                        <h1>Database Management</h1>
+                        <p>Develop and manage databases for large and small businesses</p>
+                    </div>
+                </div>
+                <div class="service1">
+                    <div class="icon">
+                        <i class='fas fa-server' style='font-size:36px'></i>
+                    </div>
+                    <div class="service">
+                        <h1>Frontend Development</h1>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
